# turtlebot_trajectory_controller

./: CMakeLists.txt  package.xml  turtlebot_trajectory_controller.kdev4
.kdev4/: turtlebot_trajectory_controller.kdev4
cfg/: TurtlebotController.cfg
include/: rate_tracker.h  trajectory_controller.h
include/turtlebot_trajectory_controller/: hard_coded_trajectory_controller.hpp  trajectory_controller.h  trajectory_controller.hpp
launch/: bump_blink_app.launch  standalone.launch  trajectory_controller.launch  visual_trajectory_controller.launch
plugins/: nodelet_plugins.xml
src/: hard_coded_nodelet.cpp  nodelet.cpp  send_test_trajectory.cpp  trajectory_controller.cpp  turtlebot_controller_node.cpp
