<package>
  <name>turtlebot_trajectory_controller</name>
  <version>0.6.6</version>
  <description>
    Code to make the turtlebot follow a trajectory.
  </description>
    <maintainer email="jssmith@gatech.edu">Justin Smith</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>yocs_controllers</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>trajectory_generator</build_depend>
  
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>geometry_msgs</build_depend>



  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>yocs_controllers</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_eigen</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>trajectory_generator</run_depend>
  
  <export>
    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml"/>
  </export>
</package>
